fix tab overflow

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.tab-content {
-	max-height:270px;
+#fileTabsContent {
+	max-height: 300px;
 	overflow-y: auto;
+	position: relative;
 }
